Fixed course page header spacing issues. Pushing these boss changes before starting to fix the prof cards issues

--- a/the-easy-score/src/screens/coursepage/course.css
+++ b/the-easy-score/src/screens/coursepage/course.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
 }
 
 .jumbo-score {
@@ -27,44 +28,50 @@
 }
 
 
+.courseContentContainer {
+  flex-direction: column;
+}
+
 .courseName {
   color: #b32727;
-  margin-bottom: 1%;
-  font-size: 155%;
+  font-size: 165%;
   font-weight: bold;
   letter-spacing: .7px;
 }
 
-
-
 .reqsContentContainer {
-  font-display: flex;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.reqsContent-requirements-title {
+  margin-right: 1%;
+  font-size: 85%;
+  color: #6c757d;
+  margin-left: 0;
+}
+
+
+.reqTagsContainer {
+  display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
+  padding-top: 2%;
 }
 
-.reqsTag {
-  flex-direction: row;
-}
-
-.reqsMetText {
-  font-size: 85%;
-  color: #6c757d;
-  margin-bottom: 0;
-  margin-left: 0;
-  /* margin-right: 1%; */
-}
-
-.requirement {
+.requirements {
   width: max-content;
-  height: fit-content;
+  height: max-content;
   background-color: #ededed;
   font-size: 85%;
   padding: 1%;
   margin-right: 1%;
   border-radius: 8px;
 }
+
+
 
 .course-page-credits-container {
   display: flex;
@@ -82,8 +89,16 @@
 
 .showingInstructorsText {
   color: #6c757d;
+  padding-left: 2%;
+  margin-bottom: 2%;
+  line-height: 165%;
 }
 
+.coursePageCourse {
+  font-weight: 500;
+  color: #b32727;
+  font-size: 100%;
+}
 /******SEARCH BAR********/
 
 .searchBarContainer {
